fix: align section numbers

--- a/src/respec/base.override.css
+++ b/src/respec/base.override.css
@@ -1,22 +1,4 @@
 /**
- * Reduce ReSpec’s default margin-left
- *
- * This margin was designed for section numbers of <ol>, but our numbers are generated by typst.
- * Therefore, we do not need the numbers of <ol>.
- */
-body.toc-inline :not(li) > .toc {
-  margin-left: 2rem;
-}
-body.toc-sidebar :not(li) > .toc {
-  margin-left: 0;
-}
-@media screen and (min-width: 78em) {
-  body:not(.toc-inline) :not(li) > .toc {
-    margin-left: 0;
-  }
-}
-
-/**
  * Disable justification, because it is too narrow
  */
 :not(li) > .toc {
